--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -107,7 +107,7 @@
                  solutions. Driven by innovation, I specialize in crafting web and mobile applications, 
                  exploring AI, and shaping the future of tech. Let’s create something extraordinary 
                  together!</p>
-                 
+
               <div class="row row--margin-top">
                 <div class="col-md-4">
                   <p class="about__bio"><strong>NAME :</strong>APARO CECILIA</p>
@@ -196,21 +196,21 @@
         <div class="row gutters-70">
           <div class="col-md-4">
             <div class="thumbnail text-center">
-              <img src="{% static '/images/logo-design.png' %} " alt="">
+              <img src="{% static '/images/data.png' %} " alt="">
               <h4 class="service__single-section__title">DATA ANALYSIS</h4>
               <p class="service__single-section__paragraph">I specialize in transforming raw data into actionable insights using tools like Jupyter Notebook, Google Colab, Power BI, and Excel. Whether it's visualizing trends or analyzing complex datasets, I deliver solutions that drive informed decision-making. </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="thumbnail text-center">
-              <img src="{% static '/images/website-design.png' %}" alt="">
+              <img src="{% static '/images/web.png' %}" alt="">
               <h4 class="service__single-section__title">WEBSITE DESIGN</h4>
               <p class="service__single-section__paragraph">I create user-friendly websites tailored to your needs. From sleek designs in WordPress to custom web applications, I ensure your online presence stands out and performs seamlessly, providing excellent functionality and an engaging user experience that drives results. </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="thumbnail text-center">
-              <img src="{% static '/images/support.png' %}" alt="">
+              <img src="{% static '/images/technicals.png' %}" alt="">
               <h4 class="service__single-section__title">TECHNICAL SUPPORT</h4>
               <p class="service__single-section__paragraph">I can as well provide ICT technical support services, I offer a wide range of services, including hardware and software troubleshooting,system updates, user training and ensuring optimal IT infrastructure performance. Your tech issues, solved efficiently </p>
             </div>
