--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -45,7 +45,8 @@ body{
 .thumbnail img {
   max-width: 100%;
   height: auto;
-  display: block;
+  display: block; 
+
 }
 
 .row {
@@ -456,6 +457,7 @@ letter-spacing: 1px;
   -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
   border: 0;
+
 }
 
 @media screen and (max-width: 991px){
@@ -464,6 +466,8 @@ letter-spacing: 1px;
    margin-bottom: 50px
  }
 }
+
+
 
 .service__single-section__title{
   font-size: 20px;
@@ -673,6 +677,16 @@ letter-spacing: 1px;
   line-height: 1.8;
   font-family: Roboto-Light;
 }
+
+
+
+.img-responsive {
+  width: 100%;           /* Ensure the image fills the width of the container */
+  max-width: 700px;      /* Limit the max width of the images */
+  height: auto;          /* Maintain the aspect ratio */
+  margin: 0 auto;        /* Center the image horizontally */
+}
+
 
 .slider .item{
   padding: 65px 0;
@@ -887,10 +901,12 @@ letter-spacing: 1px;
 .brand-logo{
 	padding-top: 90px;
 	padding-bottom: 80px;
+  
+  max-width: 100%;
 }
 
 .brand-logo--bg{
-  background: url("/static/images/skill-background.png") no-repeat;
+  background: url("/static/images/skill-background.jpg") no-repeat;
   background-size: cover;
   position: relative;
   z-index: 1;
@@ -908,7 +924,7 @@ letter-spacing: 1px;
 }
 
 .brand-logo__wrapper{
-  max-width: 1200px;
+  max-width: 1400px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -916,7 +932,8 @@ letter-spacing: 1px;
 .brand-logo__wrapper li{
   list-style-type: none;
   display: inline-block;
-  padding-right: 160px;
+  padding-right: 130px;
+  padding-left:20px ;
   margin-bottom: 20px;
   text-align: center;
 }
